# rokugakun

./: Cargo.toml  LICENSE  README.md  THIRD-PARTY-LICENSES.md  spec.md
crates/core/: Cargo.toml
crates/core/src/: config.rs  domain.rs  error.rs  fsutil.rs  lib.rs  logging.rs  preset.rs  protocol.rs  retention.rs  store.rs  timebase.rs
crates/launcher/: Cargo.toml  build.rs
crates/launcher/assets/web/: app.css  app.js  index.html
crates/launcher/src/: autostart.rs  lib.rs  main.rs  matcher.rs  overlay.rs  process_util.rs  server.rs  session.rs  tray.rs  window_detect.rs
crates/recorder/: Cargo.toml
crates/recorder/src/: demo.rs  lib.rs  main.rs  pipeline.rs  win.rs
crates/recorder/src/audio/: convert.rs  loopback.rs  mod.rs
crates/recorder/src/capture/: convert.rs  d3d.rs  grid.rs  mod.rs  wgc.rs
crates/recorder/src/encode/: aac_mf.rs  hevc_mf.rs  mod.rs
crates/recorder/src/mux/: mod.rs  segment_writer.rs
crates/ts-mux/: Cargo.toml
crates/ts-mux/src/: lib.rs  tests.rs
