# Game auto-recording launcher — Rust workspace.
# See spec.md for the full design and plan in ~/.claude/plans.
[workspace]
resolver = "2"
members = ["crates/core", "crates/ts-mux", "crates/launcher", "crates/recorder"]

[workspace.package]
version = "0.1.2"
edition = "2021"
license = "MIT"
authors = ["rokugakun"]

[workspace.dependencies]
# shared internal crates (imported as rec_core / ts_mux)
rec-core = { path = "crates/core" }
ts-mux = { path = "crates/ts-mux" }

# third-party
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
crossbeam-channel = "0.5"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
time = { version = "0.3", features = ["formatting", "macros", "local-offset"] }

[profile.release]
opt-level = 3
lto = "thin"
